--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -244,6 +244,16 @@
 - question: Валюта
   hashtag: currency
   items:
+    - question: Где обменять деньги на Пхукете?
+      hashtag: obmennikphucket
+      ldjson: yes
+      answer: |
+
+          Обменять деньги на Пхукете можно в нескольких местах в аэропорту, в отеле, в банке, в уличном обменнике.
+          
+          Уличные обменные пункты Пхукета работают до самой поздней ночи. Самый выгодный курс обменников – стойки с голубым логотипов «Currency Exchange Better Rate».
+          Обязательно на пунктах обмена валюты, должна висеть надпись «Currency Exchange». Если данная надпись отсутствует, то обменник берет комиссию за совершение операции. Те, пункты обмена которые работают по ночам – предлагают менее выгодные условия.
+
     - question: Как работают обменники в аэропорту Пхукета?
       hashtag: airportexchange
       ldjson: yes
