--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -713,5 +713,5 @@
       answer: |
       
        * Да Русская школа есть она находится по Адресу 28, Soi Chalong, Tambon Chalong, Mueang Phuket District, Phuket 83100, Таиланд
-         Предворительную запись можно сделать через  [https://www.facebook.com/RusSvet.Thai/](facebook) или [https://instagram.com/p/BoY68AJF--8/](instagram)
+         Предворительную запись можно сделать через  [facebook](https://www.facebook.com/RusSvet.Thai/) или [instagram](https://instagram.com/p/BoY68AJF--8/)
          Русская школа на Пхукете для детей от 5 до 15 лет.  
