--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -643,6 +643,13 @@
 - question: Виза
   hashtag: viza
   items:
+    - question: Как сделать виза ран на пхукете?
+      hashtag: vizarun
+      ldjson: yes
+      answer: |
+        
+        Самый быстрый вариант визарана - перелёт с Пхукета в Малайзию, а именно, прямой рейс в Куала Лумпур и обратно. Вылет с Пхукета в 07:55 утра и возвращение в аэропорт Пхукета уже в 12:30. На пересадку в Куала-Лумпуре - всего 2 часа.
+    
     - question: Как сделать продление визы на пхукете?
       hashtag: vizaprodlenie
       ldjson: yes
