--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -329,6 +329,15 @@
 - question: COVID-19
   hashtag: covid19
   items:
+    - question: Как сделать ковидное продление на пхукете?
+      hashtag: prodlenie
+      ldjson: yes
+      answer: |
+          На Пхукете отправляйтесь в центральный иммиграционный офис в Пхукет-тауне возле парка Сапхан Хин — точка на карте
+          Заходите в главное здание на 2 этаж. ...
+          Найдите 3 лотка с анкетами. ...
+          Причина продления — просто пишем «COVID-19″
+          Затем вставайте в очередь.
     - question: Где я могу найти отели Sha?
       hashtag: sha
       ldjson: yes
