--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -333,10 +333,10 @@
       hashtag: prodlenie
       ldjson: yes
       answer: |
-          На Пхукете отправляйтесь в центральный иммиграционный офис в Пхукет-тауне возле парка Сапхан Хин — точка на карте
-          Заходите в главное здание на 2 этаж. ...
-          Найдите 3 лотка с анкетами. ...
-          Причина продления — просто пишем «COVID-19″
+          На Пхукете отправляйтесь в центральный иммиграционный офис в Пхукет-тауне возле парка Сапхан Хин — точка на карте.
+          Заходите в главное здание на 2 этаж,
+          найдите 3 лотка с анкетами,
+          причина продления — просто пишем «COVID-19″,
           Затем вставайте в очередь.
     - question: Где я могу найти отели Sha?
       hashtag: sha
