--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -333,11 +333,22 @@
       hashtag: prodlenie
       ldjson: yes
       answer: |
-          На Пхукете отправляйтесь в центральный иммиграционный офис в Пхукет-тауне возле парка Сапхан Хин — точка на карте.
-          Заходите в главное здание на 2 этаж,
-          найдите 3 лотка с анкетами,
-          причина продления — просто пишем «COVID-19″,
-          Затем вставайте в очередь.
+          
+          Продление делается в 2 захода
+
+          На первом этапе заполняем анкеты и платим 1900 бат с человека (2 этаж здания, очередь в окно Information). Проверяют документы и выдают номерок. Когда его объявят, сдаете доки, вас фоткают на телефон. Вы оставляете паспорт и на следующий день забираете.
+          Забирать паспорт в здании офиса на 2 этаже в окне 2 без очереди. Отдаете номерок и получаете паспорт со штампом продления на 60 дней.
+          
+          Документы для продления штампа на 60 дней
+          
+          Паспорт и копии разворот + страница с текущим штампом и бумажкой в паспорте ТМ6 (departure card)
+          Фото на документы (1 шт, размер любой)
+          Деньги 1900 бат наличными (сдачу дают если что)
+          Распечатка на ресепшене отеля с сайта extranet.immigration.go.th, где отель регистрирует гостей в Immigration office (форма TM30). Должны быть видны все поля — код отеля, адрес, ваше имя, фамилия и даты проживания без ошибок. Это самое главное, без чего даже не принимают документы.
+
+          
+
+
     - question: Где я могу найти отели Sha?
       hashtag: sha
       ldjson: yes
