--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -14,6 +14,7 @@
           Най Харн - Время работы с 8.30 до 17.00 (Выезд каждый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
           Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
           Бесплатный трансфер до "Най Харн" с Патонг,Карон,Ката.
+          Так же слонов можно увидеть по дороге к Биг Будда.
     - question: Где есть тигры на пхукете?  
       hashtag: tigry
       ldjson: yes
