--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -94,7 +94,19 @@
       hashtag: marriage
       ldjson: yes
       answer: |
-        * Свою свадебную церемонию в Таиланде можно сделать в любом стиле – от классического европейского банкета или пляжной вечеринки до любого необычного сценария праздника. Хотите расписаться на скале? А может быть, под водой? А хотите приехать на свадьбу на слоне? Тайских свадебных организаторов сложно будет чем-либо удивить!
+        
+        * Свадьба на острове - О такой церемонии мечтает большинство пар. Безлюдный остров, тропическая природа – это поистине райское место для влюбленных и незабываемые впечатления. Дорога до острова займет 7 минут.Дополнительно можно закзать прокат свадебного платья,аренду яхт,съемку с воздуха и многое другое.
+          
+          Свадьба на пляже  – это незабываемая сказка для двоих влюбленных. Арка с живыми цветами, тропические пальмы, белый песок, ласковое море и теплое солнышко - идеально для романтических пар. Потрясающие эмоции останутся в памяти навсегда.
+          
+          Свадьба на вилле с гостями - Для любителей приватного, романтического отдыха предлагаем провести свадьбу на вилле с великолепным видом на море и на закат! Здесь можно уединиться от шума туристических улиц. Данный вариант подходит, как для небольших свадебных церемоний, так и для больших свадеб с гостями.
+          
+          Тайская свадьба - Тайская церемония или её комбинированный вариант с проведением священного ритуала в буддийском храме и торжеством под сводами арки на пляже, непременно произведет незабываемые впечатления. Буддийские монахи благословят ваш союз.
+          
+          Свадьба на Яхте - Это путешествие по Андаманскому морю вблизи Пхукета с церемонией на парусном катамаране. Яхта будет украшена живыми цветами и декорациями в выбранной вами гамме. Судно вмещает до 12 человек, поэтому на такой свадьбе могут присутствовать гости.
+          
+          
+          
     - question: Куда можно сходить?
       hashtag: nigth
       ldjson: yes
