--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -236,7 +236,9 @@
           Вот небольшой список сайтов, где мы рекомендуем бронировать
           1. [Booking](https://Booking.com)
           2. [Tripping](https://Tripping.com)
-          3. [indreamsphuket](https://www.indreamsphuket.ru)
+          3. [airbnb](https://www.airbnb.ru/thailand/stays)
+          4. [agoda](https://www.agoda.com/ru-ru/country/thailand.html?cid=1844104)
+          5. [Facebook Market Place](https://ru-ru.facebook.com)
     - question: Где на Пхукете жить дешевле всего?
       hashtag: cheaphousing
       ldjson: yes
