--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -359,7 +359,7 @@
           Паспорт и копии разворот + страница с текущим штампом и бумажкой в паспорте ТМ6 (departure card)
           Фото на документы (1 шт, размер любой)
           Деньги 1900 бат наличными (сдачу дают если что)
-          Распечатка на ресепшене отеля с сайта extranet.immigration.go.th, где отель регистрирует гостей в Immigration office (форма TM30). Должны быть видны все поля — код отеля, адрес, ваше имя, фамилия и даты проживания без ошибок. Это самое главное, без чего даже не принимают документы.
+          Могут спросить ТМ30- она же регистрация, и его обязан сделать отель или арендодатель. 
     - question: Где я могу найти отели Sha?
       hashtag: sha
       ldjson: yes
