--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -15,6 +15,7 @@
           Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
           Бесплатный трансфер до "Най Харн" с Патонг,Карон,Ката.
           Так же слонов можно увидеть по дороге к Биг Будда.
+          [Фото](https://phuketfaq.ru/assets/images/slon.jpeg)
     - question: Где есть тигры на пхукете?  
       hashtag: tigry
       ldjson: yes
@@ -31,11 +32,13 @@
         Смотровая площадка Као Ранг - тут очень много обезьян, особенно утром. Когда их кормят они достаточно агрессивны, поэтому не рекомендуется контактировать с ними вплотную и кормить с рук.
         Следующее место с обезьянами - смотровая Биг Будда. Стоять спиной к большой лестнице, обезьяны находятся сзади в правом углу.
         На юго-востоке острова, в месте под названием Ко Сирей, существует официальная площадка для наблюдения за обезьянами. Еду им лучше кидать подальше не провоцируя агрессивное поведение!
+        [Фото](https://phuketfaq.ru/assets/images/monkey.jpeg)
     - question: Смотровые площадки Пхукетa
       hashtag: smotrovie
       ldjson: yes
       answer: |
         Холм Ранг (Rang Hill), Мост Сарасин, Смотровая площадка у подножия Большого Будды, Смотровая площадка Ветряки, Смотровая площадка Карон (Karon Viewpoint), Смотровая площадка мыса Промтхеп, Наш выбор обзорная башня Кхао Кхад.
+        [Фото](https://phuketfaq.ru/assets/images/smotrovaya.jpeg)
     - question: Лучшие места для дайвинга на пхукете
       hashtag: daiving
       ldjson: yes
@@ -47,6 +50,7 @@
         Погружение в Шарк Пойнт – это развлечение не для слабонервных. Здесь дайверы часто встречают прекрасных и устрашающих леопардовых акул. Но опасаться их не стоит, так как они питаются только планктоном и кораллами.
         Любителей острых ощущений также могут заинтересовать многочисленные подводные пещеры возле острова Ко Док Май. Отвесные стены высотой около 50 метров над уровнем моря и 20 метров в глубину поразят своим величием.
         Дайвинг на Пхукете - это возможность увидеть неповторимые подводные пейзажи, которые останутся в памяти на всю жизнь.
+        [Фото](https://phuketfaq.ru/assets/images/daiving.jpeg)
     - question: Лучшие места для снорклинга на Пхукете.
       hashtag: snorkling
       ldjson: yes
@@ -57,6 +61,7 @@
       ldjson: yes
       answer: |
         Лучшими для серфинга на Пхукете считаются пляжи западного побережья острова: Ката, Камала, Най Харн, Калим, Най Янг, Сурин и Пакаранг. Лучшим и самым востребованным среди серферов является пляж Ката, но необходимо быть особенно внимательным в южной его части, где много камней, в том числе не видных под водой.
+        [Фото](https://phuketfaq.ru/assets/images/serfing.jpeg)
     - question: Где покупать экскурсии на Пхукете?
       hashtag: funphucetex
       ldjson: yes
@@ -180,6 +185,7 @@
           Время работы с 7 до 21. 
           Так же есть Villa Market - Boat Avenue Phuket (Laguna) по адресу 49/13 Bandon-Cherngtalay Rd Cherngtalay Phuket 83110. 
           Время работы  с 8 до 20. (Есть возможность доставки)  
+          [Фото](https://phuketfaq.ru/assets/images/russkieproducti.jpeg)
     - question: Где на Пхукете поесть мясо крокодила?
       hashtag: crocodile
       ldjson: yes
@@ -211,11 +217,13 @@
       ldjson: yes
       answer: |
         * Кроме змеиной фермы и соответственно змеиного мяса на Пхукете можно попробовать и другие подобные деликатесы. Прямо на улице есть несколько лотков, на которых продаются несколько видов жареных насекомых. Причем, по признанию тайцев они это не едят, а все готовят для туристов. Особенно русские любят экспериментировать с желудком.
+          [Фото](https://phuketfaq.ru/assets/images/delicates.jpeg)
     - question: Где находится ночной рынок на пляже Най-Янг?
       hashtag: allin
       ldjson: yes
       answer: |
         * В Таиланде еду готовят на каждом углу - от самого дешевого варианта за пару долларов до обедов лобстерами в дорогих ресторанах морской кухни. Если соскучитесь по родной еде - практически на каждом маленьком острове, не говоря уж о крупных курортах, можно найти русский ресторанчик. А в отелях еда, конечно, неплохая, с фруктами, но несколько неинтересная. Здесь нет египетского и турецкого олл инклюзива, когда Вас будут с утра до ночи закармливать. Плюс, день Вы, все же, будете проводить на пляже, где тоже можно вкусно и недорого поесть - так стоит ли это время тратить на обед в отеле?
+          [Фото](https://phuketfaq.ru/assets/images/rinok.jpeg)
     - question: Есть ли на Пхукете Макдональдс?
       hashtag: macdonalds
       ldjson: yes
@@ -279,6 +287,7 @@
           Чем больше купюра номиналом и новее- курс будет выше, чем за ту же сумму но купюры меньше.
         
           Все расчеты в Таиланде производятся в тайских батах, но если валюту Вы нигде не поменяете, таксисты будут рады доставить Вас в отель и примут к оплате доллары. Конечно, цену заломят, но в Таиланде принято торговаться, и стоимость поездки будет зависеть от Вашего умения торговаться.
+          [Фото](https://phuketfaq.ru/assets/images/obmennik.jpeg)
 - question: Транспорт
   hashtag: transport
   items:
@@ -465,6 +474,7 @@
       ldjson: yes
       answer: |
         * Пляжей на Пхукете очень много, но все зависит от того, что Вы хотите получить от этого отдыха. Если вы предпочитаете активный отдых, то скорее всего Вам подойдет Банг Тао, где кроме отличных песчаных берегов Вы получите максимум адреналина, катаясь на серфинге. Но хочу предупредить сразу, что для размеренного и спокойного купания этот пляж вряд ли подойдет, так как высота волн в прибрежной зоне просто зашкаливает. Это райское место для любителей активного (я бы даже сказал сумасшедшего отдыха). Если же Вы предпочитаете размеренный и спокойный отдых с детьми, то наилучшим местом будут пляжи Патонг. Здесь Вы сможете ощутить всю прелесть солнца, морского бриза и нежного моря. Дети будут просто в восторге от такого отдыха. Что касается вопросов относительно чистоты пляжей, то здесь могу Вам посоветовать воспользоваться туристическими поездками на один день на близлежащие острова, где очень чистая (кристальная) вода и нет никакой суматохи и прочих прочих проблем для прекрасного семейного отдыха.
+          [Фото](https://phuketfaq.ru/assets/images/sdetimi.jpeg)
     - question: Подходит ли Пхукет для отдыха с детьми?
       hashtag: childphuccet
       ldjson: yes
@@ -521,6 +531,7 @@
        * 121 and 121/1 Moo 7 Nanai soi 8 Tambon Thepkasattre Ampur Thalang, Thalang District, Phuket 83110, Таиланд
         Время работы - с 8 до 20
         Можете ознакомиться на сайте [Храм Святой Троицы](http://phuket.ortox.ru/)
+        [Фото](https://phuketfaq.ru/assets/images/hramhristo.jpeg)
     - question: Как проехать до Большого Будды (Big Budda) на Пхукете?
       hashtag: khramphuketbud
       ldjson: yes
@@ -547,6 +558,7 @@
         На входе действует дресс-код для девушек, колени должны быть закрыты. На входе можно получить бесплатно, на прокат, длинную юбку.
         
         На территории располагается здание для медитации, статуя Большого Будды и две смотровые площадки с которых открывается замечательный вид на весь Пхукет.
+        [Фото](https://phuketfaq.ru/assets/images/bigbudda.jpeg)
     - question: Какие храмы посетить на Пхукете?
       hashtag: khramphuket
       ldjson: yes
@@ -560,6 +572,9 @@
           Но не только буддистскими храмами богат Пхукет. Также на этом тайском острове есть православным храм. Это храм Святой Троицы, который был построен на пожертвования верующих. В храме проводятся все привычные нам христианские обряды. Ежедневно в 8 и 18 часов проходят Богослужения. По воскресеньям совершается Божественная Литургия. Этот храм находится в районе Таланг среди тропического леса.
         
           Что касается второй части вашего вопроса, то при посещении тайских храмов необходимо придерживаться определенных правил. Одежда не должна быть слишком открытой, она должна прикрывать плечи и колени. Разумеется, что не может быть речи ни о каких купальниках, шортах и коротких юбках. При входе в храм нужно обязательно снимать обувь. При входе в храм не наступайте на порог, его нужно переступать, не принято дотрагиваться к другим людям. Женщинам не только в храме, но и в любом другом месте запрещено дотрагиваться к монахам. Любые передачи монахам должны делаться исключительно через мужчину. Иногда монах может расстелить перед женщиной ткань, чтобы она положила на нее то, что хочет передать монаху.
+          [Фото](https://phuketfaq.ru/assets/images/taihram.jpeg)
+          [Фото 2](https://phuketfaq.ru/assets/images/taihram2.jpeg)
+          [Фото 3](https://phuketfaq.ru/assets/images/taihram3.jpeg)
 - question: Пляжи
   hashtag: plazhu
   items:
@@ -586,6 +601,7 @@
         Пляж Ката Пляж Ката также считается одним из самых чистых, на берегу есть несколько крупных отелей. ... 
         Пляж Банг Тао ... 
         Пляж Найтон
+        [Фото](https://phuketfaq.ru/assets/images/chistiyplazj.jpeg)
     - question: На каком пляже белый песок на пхукете?
       hashtag: phuketplazhpesok
       ldjson: yes
@@ -596,6 +612,7 @@
       ldjson: yes
       answer: |
         Пляж Карон, Пляж Патонг,Пляж Ката, Пляж Камала — Kamala Beach, Пляж Сурин, Пляж Най Харн, Пляж Найтон,Пляж Банг Тао, Пляж Фридом, Пляж Май Као, Пляж Равай — Rawai Beach, Пляж Най Янг — Nai Yang  Beach, Пляж Три Транг – Tri Trang Beach, Пляж Чалонг — Chalong Beach.
+        [Фото](https://phuketfaq.ru/assets/images/popular.png)
     - question: Пляжи пхукета для детей
       hashtag: phuketplazhdeti
       ldjson: yes
@@ -606,11 +623,13 @@
       ldjson: yes
       answer: |
         Май Као, Mai Khao — это пляж, который известен тем, что здесь очень низко пролетают самолеты, прямо над головой, иначе этот пляж так и называют — пляж с самолетами на Пхукете. В мире есть всего несколько таких пляжей, где посадочная и взлетная полоса аэропорта находятся прямо у пляжа.
+        [Фото](https://phuketfaq.ru/assets/images/samolet.jpg)
     - question: Дикие пляжи пхукета.
       hashtag: phuketplazhdikiy
       ldjson: yes
       answer: |
         Пляж Лаян, Пляж Банана, Пляж Ао Сейн, Пляж Фридом, Пляж Май Као.
+        [Фото](https://phuketfaq.ru/assets/images/dikiyplazj.jpeg)
     - question: Cамый чистый пляж пхукета
       hashtag: phuketplazhsamiichistiy
       ldjson: yes
@@ -621,6 +640,7 @@
       ldjson: yes
       answer: |
         Пхукете Пляж Freedom небольшой, длина около 300 метров. Разгуляться особо негде, но он наиболее протяженный, чем другие платные и труднодоступные пляжи Пхукета, типа Парадайз, Нуи, Банана, Ао Сен и Лаем Ка.
+        [Фото](https://phuketfaq.ru/assets/images/platniyplazj.jpeg)
     - question: Есть ли медузы на пхукете?
       hashtag: phuketplazhmeduza
       ldjson: yes
@@ -631,6 +651,7 @@
       ldjson: yes
       answer: |
         Добраться до острова можно и самостоятельно арендовав деревянную лодку на пирсе Пханг Нга Бэй в заливе Пханг Нга за пределами Пхукета.
+        [Фото](https://phuketfaq.ru/assets/images/007.jpeg)
 - question: Рыбалка
   hashtag: ribalka
   items:
@@ -654,6 +675,7 @@
         * Консульство России в Phuket возглавляет Vladimir V. Sosnov ─ консул России в Таиланд. С консул можно связаться по телефону (+66) 95-259-80-81 или по электронной почте rusconsulphuket@gmail.com
         
         Thailand - 63/501 Moo 2 - Thepkasattri Road - Kohkaew - Amphoe Mueang - Phuket 83100 — Thailand
+        [Фото](https://phuketfaq.ru/assets/images/rus.jpeg)
 - question: Банки
   hashtag: banki
   items:
@@ -705,12 +727,13 @@
         * Пхукет Таун (Phuket Town) - столица и самый крупный город провинции Пхукет, расположен в юго-восточной части острова, на берегу Пхукетского залива Андаманского моря Индийского океана.
         
           На автобусе можно доехать с Карона на Ката бич или наоборот. В настоящее время большинство русских туристов отдыхает на Кате или на Кароне. Маршрут стартует с улицы Ранонг, как и все остальные. Автобус проходит через таун и поворачивает в районе Централ Фестиваль.
+          [Фото](https://phuketfaq.ru/assets/images/phucettown.jpeg)
     - question: Где находиться фруктовый рынок на пхукете?
       hashtag: phucetrinok
       ldjson: yes
       answer: |
         * Фруктовый рынок, расположенный на Ranong Rd., считается одним из самых старых на Пхукете, раньше сюда приезжали пираты. Здесь продают всевозможные фрукты, которые привозят прямо с плантаций и ферм.
-
+          [Фото](https://phuketfaq.ru/assets/images/fructrinok.jpeg)
 - question: Рынки
   hashtag: rinki
   items:
