--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -15,7 +15,7 @@
           Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
           Бесплатный трансфер до "Най Харн" с Патонг,Карон,Ката.
           Так же слонов можно увидеть по дороге к Биг Будда.
-          [Фото](https://phuketfaq.ru/assets/images/slon.jpeg)
+          ![Фото](https://phuketfaq.ru/assets/images/slon.jpeg)
     - question: Где есть тигры на пхукете?  
       hashtag: tigry
       ldjson: yes
@@ -32,7 +32,7 @@
         Смотровая площадка Као Ранг - тут очень много обезьян, особенно утром. Когда их кормят они достаточно агрессивны, поэтому не рекомендуется контактировать с ними вплотную и кормить с рук.
         Следующее место с обезьянами - смотровая Биг Будда. Стоять спиной к большой лестнице, обезьяны находятся сзади в правом углу.
         На юго-востоке острова, в месте под названием Ко Сирей, существует официальная площадка для наблюдения за обезьянами. Еду им лучше кидать подальше не провоцируя агрессивное поведение!
-        [Фото](https://phuketfaq.ru/assets/images/monkey.jpeg)
+        ![Фото](https://phuketfaq.ru/assets/images/monkey.jpeg)
     - question: Смотровые площадки Пхукетa
       hashtag: smotrovie
       ldjson: yes
