--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -716,7 +716,7 @@
       hashtag: eng
       ldjson: yes
       answer: |
-        * Три самые известные школы иностранных языков на Пхукете расположены в районе кольца Чалонг: Walen Language School Phuket, Lingua Plus Language School Phuket и TTT Language School Phuket. В первых двух вам предложат курсы английского и тайского языков, в последней вы получите вдобавок возможность изучать французский, немецкий, итальянский и русский.
+        * Две самые известные школы иностранных языков на Пхукете расположены в районе кольца Чалонг: Lingua Plus Language School Phuket и TTT Language School Phuket. В последней вы получите вдобавок возможность изучать французский, немецкий, итальянский и русский.
 - question: Места
   hashtag: mesta
   items:
