--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -466,9 +466,27 @@
       hashtag: chdhphuket
       ldjson: yes
       answer: |
-        * Вопрос поездки с ребенком (особенно маленьким) в такую страну как Таиланд потребует от вас большого внимания и концентрации. Пхукет никак нельзя назвать необитаемым островом, наоборот, здесь отличная инфраструктура и вы можете купить все необходимое на месте, но я считаю, что не стоит на это надеяться, а лучше 80-90 процентов необходимого взять с собой. В перечне вещей, необходимых взять с собой должны быть легкие вещи (в том числе и с длинным рукавом), головные уборы, все, что необходимо для купания. В зависимости от финансовых возможностей вы должны решить необходимы ли вам маски, трубки и прочие атрибуты необходимые для отдыха на море или вам проще купить их на месте (я считая, что лучше брать свое, так как у нас эти вещи стоят дешевле и как показывает практика, намного практичнее). Но если вы собрались на отдых с ребенком, то в первую очередь нужно позаботиться о лекарственных препаратах. Во-первых, вы должны понимать, что едете на отдых в совершенно другую страну в плане климатических условий, а во-вторых, вам придется столкнуться с другой пищей, и как на эту смену отреагирует желудок неизвестно. Возьмите препараты от расстройства желудка, против расстройства желудка, жаропонижающее средства. Если есть какие-то хронические заболевания, то не надейтесь, что необходимые лекарства вы купите на Пхукете – необходимое количество препаратов берите с собой.
-          Смеси, каши...здесь это все есть но в основном только в больших магазинах, и цены гораздо выше. качество в прочем тоже лучше.
-          При отдыхе с ребенком (даже и без ребенка) необходимо взять ряд средств, которые защитят вас от комаров. Солнцезащитные крема должны быть с максимальной защитой. Вот крема везти с собой не обязательно, на Пхукете продаются прекрасные средства, которые могут хорошо защитить кожу от воздействия солнечных лучей.
+        
+        Средства от комаров — берите с собой если есть те, к которым вы привыкли, но и на Пхукете с ними проблем нет, их можно купить в любом магазине или аптеке.
+
+        Коляску — некоторые говорят «однозначно БРАТЬ, очень пригодится». Если же вы все такие решили приобрести коляску уже на Пхукете, то нужно будет проехаться по вышеупомянутым магазинам.
+        
+        Детский крем от загара — можно и в Таиланде купить, но бегать после заселения в отель в поисках крема не хочется – лучше прямиком на пляж, поэтому берите с собой. Советуют для ребенка брать крем со степенью защиты минимум 50.
+       
+        Горшок — На Пхукет его нужно будет еще поискать.
+        
+        Хозяйственное мыло — дети часто пачкают одежду, а сдавать постирать одно платье или футболку не целесообразно. В связи с этим возьмите мыло и ещё верёвку, чтобы можно было натянуть на балконе и быстро посушить бельё (в номере может долго сохнуть).
+        
+        Если ребёнок девочка, то побольше резинок и заколок, чтоб собирать волосы, иначе от них ребенку будет жарко.
+        
+        Головной убор для ребёнка обязательно с полями, чтоб уши не обгорели (никаких кепок) и лёгкая свободная одежда с длинными рукавами, типа туники, футболки или рубашки, чтобы не получить солнечного ожога. Как правило обгорает верхняя часть тела, а ножки гораздо реже.
+        
+        Пляжная обувь — можно купить в Таиланде, здесь хороший выбор.
+        
+        Купальник — берите 1 точно, также можно купить в Таиланде на смену, чтобы в мокром не бегал.
+        
+        Предметы личной гигиены — берите с собой (зубную щётку, специальную детскую пасту и т. д.). За всем по магазинам не набегаешься после приезда
+    
     - question: Какой пляж лучше на Пхукете для отдыха с детьми?
       hashtag: childphucet
       ldjson: yes
