--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -502,9 +502,20 @@
       hashtag: childphuccetfun
       ldjson: yes
       answer: |
-        * Отдых с ребенком без активных и разнообразных развлечений просто невозможен. В этом плане Пхукет порадует туристов наличием живописных парков с разно видовыми обитателями (Парк птиц, Королевство тигров, Сад бабочек, аквариум). Для подростков на острове найдется парочка экстремальных развлечений. Юные туристы мужского пола с удовольствием испытают себя на тарзанке Джунгли Баджи Джамп в районе пляжа Ката. Кто из мальчишек откажется совершить прыжок с высоты 50 метров. Главное, чтобы родители разрешили. Также порцию незабываемых впечатлений предоставит юным путешественникам парк с картинг-треками, расположенный недалеко от пляжа Патонг. И для закрепления смелости отважным туристам юного возраста останется только поучаствовать в зорбинге. Особенно эмоциональным получится спуск в огромном шаре с зеленого холма у детей, пробующих это аттракцион впервые.
         
-          Не придется скучать и туристам с маленькими путешественниками. Для любознательных непосед на острове имеются крытые детские площадки при торговых центрах и отелях. Интересная детская зона под открытым небом имеется в парке Рамы IX в центре Пхукета.
+        Закрытые игровые площадки
+        
+        ТЦ Патонг променад, детская зона (Patong Promenade, kids zone);
+        ТЦ Джанг Цейлон, 3 этаж (Jung Ceylon)
+        В ТЦ Централ Фестивале (Central Festival) на 4 этаже детская зона. Она не очень интересная, зато ребетенка можно оставить, если ему 4, и походить по магазинам.
+        Детский центр Джимбори (Gymboree) на первом этаже в Централ Фестивале, там дети делают разные подделки, но это тоже для детишек от 4-x.
+        В районе Лагуна в отеле Ангсана (Angsana).
+
+        Уличные игровые площадки
+        
+        Парк рамы 9, в годе Пхукет
+        Наихарн, около озера, напротив храма, там есть заезд на островок, парковка около площадки.
+        Детский Центр «KIDS PLANET»
     - question: Чем кормить ребёнка на острове?
       hashtag: childphucceteat
       ldjson: yes
