--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -520,12 +520,17 @@
       hashtag: childphucceteat
       ldjson: yes
       answer: |
-        * Первые несколько дней отдыха на Пхукете станут для малышей адаптационными. В это период чад лучше всего кормить знакомыми блюдами и продуктами. Готовые молочные смеси, каши и пюре в баночках проще всего будет купить в супермаркетах. Правда, среди готовых пюре редко попадаются овощные, большей часть представлены детские консервы из местных фруктов. В тех же супермаркетах продаются хлопья, йогурты и молоко, а вот кефир и творожок мне найти не удалось.
-          В магазине Севен-Элевен в районе Ката и супермаркете Семейный продаются кроме прочего готовые сэндвичи в упаковке и вареные яйца.
-        
-          Свежие фрукты и овощи для детей проще всего будет купить на рынке Банзан, который находится на улице Ратутит недалеко от набережной Патонг. ележки с очень дешевыми фруктами- на резаными и на чищеными регулярно есть в оживленных местах, так же тележки с мороженым, кукурузой, бататом, шашлычками, блинчиками ротти и всякими другими вкусностями.
-        
-          Что же касается готовой еды, то в районе многих пляжей острова работают русские и итальянские рестораны, в меню которых имеется обычное пюре с котлетой или спагетти. Из блюд тайской кухни детям могут прийтись по вкусу жареные овощи (пад пак руам), омлет (кхай тияо) или рис с курицей (кхау мак кхай).
+         
+         Кормление ребёнка, как правило, не вызывает никаких трудностей. Рыба, мясо, рис, фрукты, супчики – всё есть. Люди приезжают с годовалыми детьми и проблем с кормлением обычно не возникает. В русских ресторанах на Пхукете есть детское меню. Пюре и детское питание в отелях не продают, но их можно купить в магазинах и торговых центрах.
+
+         
+         Примеры некоторых тайских блюд которые смогу есть дети (в скобках название на тайском языке)
+         
+         1.Cуп с курицей на кокосовом молоке — Том ка гаи (ต้มข่าไก่)
+         2.Курица с орешками кешью — Гаи пад мет мамуанг (ไก่ผัดเม็ดมะม่วง)
+         3.Жаренные овощи — Пад пак руам (ผัดผักรวม)
+         4.Жареный рис с креветками/курицей/свининой — Као пад гунг/гаи/муу (ข้าวผัด ไก่/กุ้ง/หมู)
+         5.Омлет — Каи тияо (ไข่เจี้ยว).
     - question: Детский врач?
       hashtag: childphuccetdoc
       ldjson: yes
