--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -651,7 +651,7 @@
       hashtag: phuketplazhdeti
       ldjson: yes
       answer: |
-        Пляжи Карон, Ката, Ката Ной, Най Харн,  Банг Тао, Камала, Сурин, Найтон.
+        Для отдыха с детьми подойдет пляж с чистой и спокойной водой (не такой оживлённый, как Патонг). В этом вопросе многое зависит от возраста ребёнка. Мамы считают, что «С малышами лучше такие пляжи как Ката или Карон, а с детьми лет 6 и старше уже и на Патонге можно отдыхать». Стоит также отметить пляж Наихарн на юге острова, где практически круглый год, рядом с пляжем образуется естественный бассейн с приливной водой.    
     - question: Как называеться пляж с самолетами на пхукете?
       hashtag: phuketplazhsamolet
       ldjson: yes
