--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -345,11 +345,14 @@
       hashtag: topupconnection
       ldjson: yes
       answer: |
-        Приходите в любой 7-eleven или Family Mart и покупаете карту оплаты. Говорите: money card Dtac 100/200/500 бат. 100/200/500 бат — это номинал карты, то есть, сколько вы хотите положить на счет. Далее стираете с обратной стороны защитный слой и видите код. Набираете на телефоне *100* код1 код2 #Мобильный интернет в Таиланде - где купить сим карты DTAC, тарифы, после чего деньги сразу поступают на счет. Там все написано, на карточке, не ошибетесь.
+        Приходите в любой 7-eleven или Family Mart и покупаете карту оплаты. Говорите - money card Dtac 100/200/500 бат. 100/200/500 бат — это номинал карты, то есть, сколько вы хотите положить на счет. Далее стираете с обратной стороны защитный слой и видите код, после чего деньги сразу поступают на счет. Там все написано, на карточке, не ошибетесь.
         
         В этих минимаркетах и супермаркетах (Tesco, Big C и тд) можно положить деньги через кассу. Для этого нужно знать свой телефонный номер.
         
-        Еще более простой вариант пополнить банковской картой на сайте DTAC, не выходя из отеля. Оплата банковской картой.
+        Еще более простой вариант пополнить банковской картой (только тайской) на сайте DTAC, не выходя из отеля. Оплата банковской картой.
+        
+        Так же можно пополнить в любом супермаркете, для этого вам нужно знать свой номер.
+        
 - question: COVID-19
   hashtag: covid19
   items:
