--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -488,14 +488,8 @@
         
         Купальник — берите 1 точно, также можно купить в Таиланде на смену, чтобы в мокром не бегал.
         
-        Предметы личной гигиены — берите с собой (зубную щётку, специальную детскую пасту и т. д.). За всем по магазинам не набегаешься после приезда
-    
-    - question: Какой пляж лучше на Пхукете для отдыха с детьми?
-      hashtag: childphucet
-      ldjson: yes
-      answer: |
-        * Пляжей на Пхукете очень много, но все зависит от того, что Вы хотите получить от этого отдыха. Если вы предпочитаете активный отдых, то скорее всего Вам подойдет Банг Тао, где кроме отличных песчаных берегов Вы получите максимум адреналина, катаясь на серфинге. Но хочу предупредить сразу, что для размеренного и спокойного купания этот пляж вряд ли подойдет, так как высота волн в прибрежной зоне просто зашкаливает. Это райское место для любителей активного (я бы даже сказал сумасшедшего отдыха). Если же Вы предпочитаете размеренный и спокойный отдых с детьми, то наилучшим местом будут пляжи Патонг. Здесь Вы сможете ощутить всю прелесть солнца, морского бриза и нежного моря. Дети будут просто в восторге от такого отдыха. Что касается вопросов относительно чистоты пляжей, то здесь могу Вам посоветовать воспользоваться туристическими поездками на один день на близлежащие острова, где очень чистая (кристальная) вода и нет никакой суматохи и прочих прочих проблем для прекрасного семейного отдыха.
-          ![Фото](https://phuketfaq.ru/assets/images/sdetimi.jpeg)
+        Предметы личной гигиены — берите с собой (зубную щётку, специальную детскую пасту и т. д.). За всем по магазинам не набегаешься после приезда.
+        
     - question: Подходит ли Пхукет для отдыха с детьми?
       hashtag: childphuccet
       ldjson: yes
@@ -655,6 +649,7 @@
       ldjson: yes
       answer: |
         Для отдыха с детьми подойдет пляж с чистой и спокойной водой (не такой оживлённый, как Патонг). В этом вопросе многое зависит от возраста ребёнка. Мамы считают, что «С малышами лучше такие пляжи как Ката или Карон, а с детьми лет 6 и старше уже и на Патонге можно отдыхать». Стоит также отметить пляж Наихарн на юге острова, где практически круглый год, рядом с пляжем образуется естественный бассейн с приливной водой.    
+       ![Фото](https://phuketfaq.ru/assets/images/sdetimi.jpeg)
     - question: Как называеться пляж с самолетами на пхукете?
       hashtag: phuketplazhsamolet
       ldjson: yes
