--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -805,6 +805,6 @@
       ldjson: yes
       answer: |
       
-       * Да Русская школа есть она находится по Адресу 28, Soi Chalong, Tambon Chalong, Mueang Phuket District, Phuket 83100, Таиланд
-         Предворительную запись можно сделать через  [facebook](https://www.facebook.com/RusSvet.Thai/) или [instagram](https://instagram.com/p/BoY68AJF--8/)
-         Русская школа на Пхукете для детей от 5 до 15 лет.  
+       * Если же вы хотите обучать ребенка по российской программе, то в Таиланде существуют русские школы. В них преподают российские учителя. Стоимость обучения в русской школе составляет от 12 000 бат в месяц и выше. По окончанию обучения ученик получит аттестат российского образца.
+
+         На Пхукете открыты школы Phuket International Kindergarden & School и «Спектр». Школа Phuket International Kindergarden & School обучает по сингапурской программе, но можно посещать уроки русского языка. В этой школе учатся дети из разных стран. В школе «Спектр» классы состоят только из русскоговорящих детей, обучаются по российской программе и в конце обучения ученики получат российский аттестат.  
