--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -688,7 +688,15 @@
       hashtag: phuketribalka
       ldjson: yes
       answer: |
-        Морская рыбалка на Пхукете,Групповая экскурсия "Морская рыбалка на Пхукете".Индивидуальная морская рыбалка и аренда катера для рыбалки на Пхукете,Рыбалка на Пхукете самостоятельно с берега,Озерная пресноводная рыбалка на Пхукете.
+         
+         Морская рыбалка на Пхукете вблизи островов Рача Яй и Рача Ной - Этот вид рыбалки не потребует значительных усилий. Рядом с этими островами производится ловля морских хищных рыб методом троллинга — леска и приманка перемещаются вслед за плавсредством. На пути следования судна во время этой рыбалки есть глубокие места, из которых можно достать тунца, дорадо, барракуду и королевскую макрель, а если повезет — то и всех вместе за один день.  
+
+         Рыбалка на Пхукете самостоятельно с берега - Если основная цель поездки – отдых на пляже, но все равно хочется что-то поймать, то лучше всего взять с собой спиннинговое удилище. Рыбалка с берега не сможет сравниться по размерам пойманной рыбы с ловлей в море или на озере, но с ней так же можно получить массу интересных впечатлений.
+        
+         Ловить можно как в заброс на силиконовые приманки с подмоткой, так и на донку с естественной наживкой. Местная рыба не откажется от куска тунца, или любой другой рыбы на крючке. Места стоит выбирать с каменистым дном, но не слишком глубокие.
+
+         Озерная пресноводная рыбалка на Пхукете - Если же не уезжать с Пхукета, возможность поймать крупную рыбку все равно остается, например на озере Чалонг местные обитатели достигают веса до 30 кг, в том числе сомы по 10–15 кг встречаются довольно часто. Наживку можно использовать разную — говорят, пиранья клюет и на хлеб. Оборудование и все необходимое предоставляется туристической организацией, так что можно прийти к месту сбора буквально с пустыми руками.  Всего в полутора часах езды от Пхукета есть удивительно красивое озеро (еще один повод взять с собой фото- или видеокамеру). Некоторые представители местной фауны, выловленные из этого озера, весили под 100 килограммов! Это и сомы, и рыба-аллигатор, и уже упомянутая выше арапайма. Если выделить один день из своей поездки на Пхукет и съездить в Пханг Нга, то можно попытать счастья в ловле этих гигантов. Клюет не всегда, но из-за прекрасных видов многие все равно мечтают съездить на рыбалку именно в эту провинцию. 
+
     - question: Разрешена ли рыбалка на пхукете с берега.
       hashtag: phuketribalkabereg
       ldjson: yes
