--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -577,14 +577,19 @@
         - Плата за вход Бесплатно
         
         - Время работы Ежедневно с 9/00 до 18/00
-        
-        - Как добраться до Большого Будды на автомобиле или мотобайке. К Большому Будде ходит много экскурсии, стоимость которых колеблется в районе 1000 (на человека), в зависимости от места отправления. Где то дороже, где то дешевле. И так так мы экономные туристы, мы выбираем своим основным средством передвижения мотобайк.
-        От Патонга нужно ехать через пляжи Карон и Ката до кольца Чалонг (Chalong Circle), на кольце повернуть налево (на дорогу, ведущую в аэропорт). Примерно через 700 метров на светофоре будет указатель налево. От указателя нужно ехать по стрелкам 6-7 км. Дальше по пути вы можете заехать на слоновью ферму, покормить слонов, и покататься на них. Главное не пропустить указатель поворота, на ферму слева от вас.
-        
-        Как доберемся на место, паркуем байк на бесплатной парковке. Дальше идем к пропускному пункту.
-        
-        На входе действует дресс-код для девушек, колени должны быть закрыты. На входе можно получить бесплатно, на прокат, длинную юбку.
-        
+          Подняться к Биг Будде можно несколькими способами,
+
+          
+          Самый легкий – заказать такси или тук-тук. Это самый затратный способ.
+          
+          Можно взять в аренду мотобайк и доехать до Биг Будды самостоятельно. Это весьма бюджетный способ, но нужно быть уверенным в своих силах. Ведь предстоит подъем на горку, местами весьма крутой.
+          
+          Самый бюджетный, но трудо и времязатратный способ – подъем пешком. Сразу скажу, идти сложно, тени почти нигде нет. Ближе всего идти с Карона, всего 1,5 километра. Идти по лесной тропинке, где можно встретить диких лесных обезьян. Мы поднимались со стороны Ват Чалонга, дорога была долгой, но интересной. Ведь по пути нам попадались слоновые питомники, где можно покататься на слонах, или покормить их, или просто посмотреть на слониху со слоненком. Мы проходили мимо аутентичной фермы, по территории которой расхаживали курочки, петухи и поросята. Но самое главное — потрясающие виды.
+          
+          Самый интересный способ, на мой взгляд, подняться на Будду на квадроциклах, по цене обычного такси. Причем стоимость проката на квадроциклах на месте в 2 раза дороже, чем покупать экскурсию с трансфером от отеля по подножия горы, чтобы пересесть на квадроциклы и уже на них добраться по Будды.
+
+          
+          
         На территории располагается здание для медитации, статуя Большого Будды и две смотровые площадки с которых открывается замечательный вид на весь Пхукет.
         ![Фото](https://phuketfaq.ru/assets/images/bigbudda.jpeg)
     - question: Какие храмы посетить на Пхукете?
