--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -578,18 +578,13 @@
         
         - Время работы Ежедневно с 9/00 до 18/00
           Подняться к Биг Будде можно несколькими способами,
-
-          
-          Самый легкий – заказать такси или тук-тук. Это самый затратный способ.
-          
-          Можно взять в аренду мотобайк и доехать до Биг Будды самостоятельно. Это весьма бюджетный способ, но нужно быть уверенным в своих силах. Ведь предстоит подъем на горку, местами весьма крутой.
-          
-          Самый бюджетный, но трудо и времязатратный способ – подъем пешком. Сразу скажу, идти сложно, тени почти нигде нет. Ближе всего идти с Карона, всего 1,5 километра. Идти по лесной тропинке, где можно встретить диких лесных обезьян. Мы поднимались со стороны Ват Чалонга, дорога была долгой, но интересной. Ведь по пути нам попадались слоновые питомники, где можно покататься на слонах, или покормить их, или просто посмотреть на слониху со слоненком. Мы проходили мимо аутентичной фермы, по территории которой расхаживали курочки, петухи и поросята. Но самое главное — потрясающие виды.
-          
-          Самый интересный способ, на мой взгляд, подняться на Будду на квадроциклах, по цене обычного такси. Причем стоимость проката на квадроциклах на месте в 2 раза дороже, чем покупать экскурсию с трансфером от отеля по подножия горы, чтобы пересесть на квадроциклы и уже на них добраться по Будды.
-
-          
-          
+           
+        Самый легкий – заказать такси или тук-тук. Если хорошо поторговаться можно доехать не дорого, но не каждый тук тук туда поднимется.
+        Можно взять в аренду мотобайк и доехать до Биг Будды самостоятельно. Это весьма бюджетный способ, но нужно быть уверенным в своих силах. Ведь предстоит подъем на горку, местами весьма крутой.
+        Самый бюджетный, но трудо и времязатратный способ – подъем пешком. Идти по лесной тропинке, где можно встретить диких лесных обезьян. Мы поднимались со стороны Ват Чалонга, дорога была долгой, но интересной. Ведь по пути нам попадались слоновые питомники, где можно покататься на слонах, или покормить их, или просто посмотреть на слониху со слоненком. Мы проходили мимо аутентичной фермы, по территории которой расхаживали курочки, петухи и поросята. Но самое главное — потрясающие виды.
+        Выходить нужно с утра, потому что потом будет очень жарко (Даже если пасмурная погода).
+        Можно байк такси - если водитель опытный, но острые ощущения гарантируются!
+        Там есть магазинчик где можно купить воду и снеки, сувениры. Но вот нормальной еды там в нет, желательно взять с собой еду, и перекусить наверху, когда нагуляетесь по храму.   
         На территории располагается здание для медитации, статуя Большого Будды и две смотровые площадки с которых открывается замечательный вид на весь Пхукет.
         ![Фото](https://phuketfaq.ru/assets/images/bigbudda.jpeg)
     - question: Какие храмы посетить на Пхукете?
