--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -615,7 +615,20 @@
       hashtag: phuketacula
       ldjson: yes
       answer: |
-        Тропическое расположение Тайланда, теплая вода, разнообразие морской жизни привлекают в моря, омывающие эту страну, не только туристов со всего света, но и морских обитателей. Подводная фауна тайских вод разнообразна, представлена многочисленными видами, среди которых одними из наиболее колоритных по праву считаются акулы.
+        
+        Всего в водах Пхукета насчитывается порядка 30 видов акул, среди которых самыми опасными хищниками для человека признаны белая, китовая и черная акулы.
+
+
+        Как показывает практика опасность нападения акул на Пхукете ничтожна мала, так как практически все виды хищников очень редко подплывают к берегам пляжей Пхукета.
+
+
+        Но всё же, чтобы не встретиться с акулами стоит соблюдать ряд простых правил, которые касаются не только побережий Пхукета, но и других акваторий, где водятся хищники
+
+        Не заплывать далеко от берега и за установленные спасателями буйки,
+        находится в зоне видимости,
+        не плавать в темное время суток и ночью, поскольку многие виды акул считаются ночными хищниками,
+        яркий купальный костюм, украшения или другие блестящие элементы на человеке способны привлечь акулу подплыть ради простого интереса,
+        не совершать резких движений, плавать в размеренном темпе.
     - question: Общество нудистов в Таиланде?
       hashtag: phuketnudist
       ldjson: yes
