--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -697,7 +697,10 @@
       hashtag: phuketplazhmeduza
       ldjson: yes
       answer: |
-        Приезжающим отдохнуть в Таиланд следует знать, что понятия «сезон медуз» на Пхукете не существует. Морские создания появляются у берегов, как правило, после дождей и штормов.
+          
+          Медузы могут появиться на любом пляже курортного острова, их приносит и уносит приливными волнами, все зависит от погоды, силы течений и штормов в окрестностях Пхукета. 
+
+          Будучи явлением сезонным и привязанным к муссонам, дождям и волнениям на море, медузы, скорее всего, пропадут из акватории Пхукета к декабрю. Обращайте внимание на таблички и флаги на пляже, на щупальца и тельца медуз на песке, прислушивайтесь к советам спасателей и местных жителей, смотрите по сторонам во время купания и не устраивайте водные процедуры ночью. 
     - question: Как попасть на остров Джеймса Бонда на пхукете?
       hashtag: phuketplazhbond
       ldjson: yes
