--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -826,8 +826,12 @@
       ldjson: yes
       answer: |
         
-        * В разных районах Пхукета работают отдельные кафе и рестораны, предлагающие доставку по району. Обычно у них есть листовки с меню. Доставка может быть бесплатной или за дополнительные 40-50 бат. И ещё один вариант для заказа еды — приложение Grab.
-
+       Food Panda -	Приложение удобное и в нем очень легко разобраться. Но для начала лучше выбрать английскую версию и войти с помощью социальных сетей или почты. В списке заведений-партнеров можно увидеть как дешевые макашницы, сетевые кафе фаст фуда и достаточно приличные рестораны. Выбор тайских блюд практически не ограничен. Во время заказа можно указать пожелания к блюду (отсутствие лука, острота и тд), либо дополнительные ингридиенты.
+       Grab food - Больше выбор кафе, чем у FoodPanda, но большинство блюд написаны все-таки на тайском. Поэтому подойдет для пользования абсолютно не всем. Расстраивает так же, что акции проводятся тоже только для тайцев и оплатить картой можно только при наличии тайского ID ( тайскую карту без него подключить не удалось даже с помощью технической поддержки).
+       Также доступна опция заказа товаров из магазина, список магазинов шире, отсюда и выгода использования этого приложения.
+       В случае, если у вас нет тайского номера телефона или вы не можете привязать свою банковскую карту, чтобы воспользоваться вышеперечисленными приложениям — на помощь придут русские кафе. На родном языке у вас примут заказ, примут оплату в рублях и привезут привычную еду для вас и ваших детей. Особенно актуально тем, кто попал на карантин на Пхукете.
+       Русское кафе «Алтай» на пляже Ката — доставка есть по всему острову. Досточно большое меню с русскими и тайскими блюдами. 
+       [Алтай Сайт](https://foodmenu.online/Altai)
 - question: Школа
   hashtag: shkola
   items:
